folding and irrep color added

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -63,5 +63,11 @@
             "'",
             "'"
         ]
-    ]
+    ],
+    "folding": {
+        "markers": {
+            "start": "^\\s*==>\\s*",
+            "end": "^\\s*==<"
+        }
+    }
 }
