--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/marink2/forte-lang.git"
   },
   "author": "marink2",
+  "publisher": "marink2",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.89.0"
