--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "forte-lang",
   "displayName": "forte-lang",
   "description": "Language support for Forte input.",
+  "main": "./extension.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/marink2/forte-lang.git"
